@@ -1,55 +1,76 @@
 package com.eefood.reactionservice.mealplan.service;
 
+import com.eefood.reactionservice.dto.response.UserBodyMetricsResponse;
+import com.eefood.reactionservice.dto.response.UserResponse;
 import com.eefood.reactionservice.enums.ErrorMessage;
 import com.eefood.reactionservice.exception.ExceptionUtil;
+import com.eefood.reactionservice.mealplan.dto.ai.GeneratedMealItem;
+import com.eefood.reactionservice.mealplan.dto.ai.MealPlanAiCandidate;
+import com.eefood.reactionservice.mealplan.dto.request.MealPlanGenerateRequest;
 import com.eefood.reactionservice.mealplan.dto.request.MealPlanUpsertRequest;
 import com.eefood.reactionservice.mealplan.dto.response.MealPlanDailySummaryResponse;
-import com.eefood.reactionservice.mealplan.dto.response.MealPlanItemIngredientResponse;
 import com.eefood.reactionservice.mealplan.dto.response.MealPlanItemResponse;
 import com.eefood.reactionservice.mealplan.dto.response.MealPlanResponse;
+import com.eefood.reactionservice.mealplan.enums.MealSlot;
+import com.eefood.reactionservice.mealplan.mapper.MealPlanItemMapper;
 import com.eefood.reactionservice.mealplan.mapper.MealPlanMapper;
 import com.eefood.reactionservice.mealplan.model.MealPlan;
 import com.eefood.reactionservice.mealplan.model.MealPlanItem;
-import com.eefood.reactionservice.mealplan.model.MealPlanItemIngredient;
-import com.eefood.reactionservice.mealplan.repo.MealPlanItemIngredientRepository;
 import com.eefood.reactionservice.mealplan.repo.MealPlanItemRepository;
 import com.eefood.reactionservice.mealplan.repo.MealPlanRepository;
+import com.eefood.reactionservice.repository.httpclient.IamClient;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class MealPlanService {
+    private static final int MAX_GENERATE_DAYS = 5;
+    private static final int DEFAULT_DAYS = 3;
+    private static final List<MealSlot> DEFAULT_SLOTS = List.of(MealSlot.BREAKFAST, MealSlot.LUNCH, MealSlot.DINNER);
 
     private final MealPlanRepository mealPlanRepository;
     private final MealPlanItemRepository mealPlanItemRepository;
-    private final MealPlanItemIngredientRepository mealPlanItemIngredientRepository;
+    private final IamClient iamClient;
     private final MealPlanMapper mealPlanMapper;
+    private final MealPlanItemMapper mealPlanItemMapper;
+    private final MealPlanAiPlannerService mealPlanAiPlannerService;
+    private final MealPlanIngredientService mealPlanIngredientService;
+    private final MealPlanCandidateService mealPlanCandidateService;
 
     @Transactional
     public MealPlanResponse upsertCurrentMealPlan(Long userId, MealPlanUpsertRequest request) {
-        validateUpsertRequest(userId, request);
+        if (userId == null || request == null) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+
+        if (request.getStartDate() == null || request.getEndDate() == null) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+
+        if (request.getEndDate().isBefore(request.getStartDate())) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
 
         MealPlan mealPlan = mealPlanRepository.findByUserId(userId)
                 .orElseGet(() -> MealPlan.builder().userId(userId).build());
 
-        mealPlan.setGoal(request.getGoal());
-        mealPlan.setStartDate(request.getStartDate());
-        mealPlan.setEndDate(request.getEndDate());
-        mealPlan.setNote(request.getNote());
-        mealPlan.setUserHealthNote(request.getUserHealthNote());
+        mealPlanMapper.updateFromRequest(request, mealPlan);
 
         MealPlan savedMealPlan = mealPlanRepository.save(mealPlan);
-        return buildMealPlanResponse(savedMealPlan);
+        return mealPlanMapper.toResponse(savedMealPlan);
     }
 
     @Transactional
@@ -59,8 +80,128 @@ public class MealPlanService {
         }
 
         return mealPlanRepository.findByUserId(userId)
-                .map(this::buildMealPlanResponse)
+                .map(mealPlanMapper::toResponse)
                 .orElse(null);
+    }
+
+    @Transactional
+    public void deleteCurrentMealPlan(Long userId) {
+        if (userId == null) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+
+        MealPlan mealPlan = mealPlanRepository.findByUserId(userId)
+                .orElseThrow(() -> ExceptionUtil.notFound(ErrorMessage.MEAL_PLAN_NOT_FOUND));
+
+        mealPlanRepository.delete(mealPlan);
+    }
+
+    @Transactional
+    public MealPlanResponse generateInitialMealPlan(Long userId, MealPlanGenerateRequest request) {
+        // Lay user va candidate, generate plan, roi thay item hien tai cua plan.
+        if (userId == null || request == null || request.getStartDate() == null || request.getGoal() == null || request.getGoal().isBlank()) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+
+        if (request.getDays() != null && (request.getDays() <= 0 || request.getDays() > MAX_GENERATE_DAYS)) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+
+        UserResponse user = iamClient.getUserById(userId).getData();
+        UserBodyMetricsResponse bodyMetrics = iamClient.getUserBodyMetrics(userId).getData();
+        List<MealPlanAiCandidate> candidates = mealPlanCandidateService.loadCandidates(userId, user, request.getGoal());
+
+        if (candidates.isEmpty()) {
+            throw ExceptionUtil.notFound(ErrorMessage.RECIPE_NOT_FOUND);
+        }
+
+        int resolvedDays = resolveDays(request);
+
+        List<GeneratedMealItem> generatedItems = mealPlanAiPlannerService.generatePlan(
+                user,
+                bodyMetrics,
+                request,
+                candidates,
+                resolvedDays
+        );
+        if (generatedItems.isEmpty()) {
+            generatedItems = fallbackGenerate(request, candidates);
+        }
+
+        MealPlan mealPlan = mealPlanRepository.findByUserId(userId)
+                .orElseGet(() -> MealPlan.builder().userId(userId).build());
+
+        mealPlan.setGoal(request.getGoal());
+        mealPlan.setStartDate(request.getStartDate());
+        mealPlan.setEndDate(request.getStartDate().plusDays(resolvedDays - 1L));
+        mealPlan.setNote("Kế hoạch nấu ăn");
+        mealPlan.setUserHealthNote(buildUserHealthNote(user, bodyMetrics));
+
+        MealPlan savedMealPlan = mealPlanRepository.save(mealPlan);
+
+        mealPlanIngredientService.deleteIngredientsByMealPlanId(savedMealPlan.getId());
+        mealPlanItemRepository.deleteAllByMealPlanId(savedMealPlan.getId());
+        saveGeneratedItems(savedMealPlan.getId(), generatedItems);
+
+        return getCurrentMealPlan(userId);
+    }
+
+    @Transactional
+    public MealPlanResponse continueMealPlan(Long userId, LocalDate startDate, Integer days) {
+        if (userId == null) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+
+        if (days != null && (days <= 0 || days > MAX_GENERATE_DAYS)) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+
+        MealPlan mealPlan = mealPlanRepository.findByUserId(userId)
+                .orElseThrow(() -> ExceptionUtil.notFound(ErrorMessage.MEAL_PLAN_NOT_FOUND));
+
+        if (mealPlan.getStartDate() == null || mealPlan.getEndDate() == null
+                || mealPlan.getGoal() == null || mealPlan.getGoal().isBlank()) {
+            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
+        }
+        int resolvedDays = days == null ? DEFAULT_DAYS : days;
+
+        LocalDate nextStartDate = startDate != null ? startDate : mealPlan.getEndDate().plusDays(1);
+        LocalDate nextEndDate = nextStartDate.plusDays(resolvedDays - 1L);
+        UserResponse user = iamClient.getUserById(userId).getData();
+        UserBodyMetricsResponse bodyMetrics = iamClient.getUserBodyMetrics(userId).getData();
+        List<MealPlanAiCandidate> candidates = mealPlanCandidateService.loadCandidates(userId, user, mealPlan.getGoal());
+
+        if (candidates.isEmpty()) {
+            throw ExceptionUtil.notFound(ErrorMessage.RECIPE_NOT_FOUND);
+        }
+
+        MealPlanGenerateRequest continueRequest = MealPlanGenerateRequest.builder()
+                .goal(mealPlan.getGoal())
+                .startDate(nextStartDate)
+                .days(resolvedDays)
+                .build();
+
+        List<GeneratedMealItem> generatedItems = mealPlanAiPlannerService.generatePlan(
+                user,
+                bodyMetrics,
+                continueRequest,
+                candidates,
+                resolvedDays
+        );
+        if (generatedItems.isEmpty()) {
+            generatedItems = fallbackGenerate(continueRequest, candidates);
+        }
+
+        mealPlan.setEndDate(nextEndDate);
+        mealPlan.setNote("Generated by AI");
+        mealPlan.setUserHealthNote(buildUserHealthNote(user, bodyMetrics));
+        MealPlan savedMealPlan = mealPlanRepository.save(mealPlan);
+
+        mealPlanIngredientService.deleteIngredientsByMealPlanIdAndDateRange(savedMealPlan.getId(), nextStartDate, nextEndDate);
+        mealPlanItemRepository.deleteAllByMealPlanIdAndPlanDateBetween(savedMealPlan.getId(), nextStartDate, nextEndDate);
+        saveGeneratedItems(savedMealPlan.getId(), generatedItems);
+
+        return getCurrentMealPlan(userId);
     }
 
     @Transactional
@@ -71,7 +212,7 @@ public class MealPlanService {
 
         return mealPlanRepository.findByUserId(userId)
                 .map(mealPlan -> {
-                    // Gom tất cả item theo ngày và cộng dồn dinh dưỡng theo servings của từng item.
+                    // Gom tat ca item theo ngay va cong don dinh duong theo servings cua tung item.
                     Map<LocalDate, List<MealPlanItem>> itemsByDate = mealPlanItemRepository
                             .findAllByMealPlanIdOrderByPlanDateAscMealSlotAscItemOrderAsc(mealPlan.getId()).stream()
                             .filter(item -> item.getPlanDate() != null)
@@ -95,21 +236,6 @@ public class MealPlanService {
     }
 
     @Transactional
-    public MealPlanDailySummaryResponse getDailySummary(Long userId, LocalDate planDate) {
-        if (userId == null || planDate == null) {
-            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
-        }
-
-        MealPlan mealPlan = mealPlanRepository.findByUserId(userId)
-                .orElseThrow(() -> ExceptionUtil.notFound(ErrorMessage.MEAL_PLAN_NOT_FOUND));
-
-        List<MealPlanItem> items = mealPlanItemRepository
-                .findAllByMealPlanIdAndPlanDateOrderByMealSlotAscItemOrderAsc(mealPlan.getId(), planDate);
-
-        return toDailySummary(planDate, items);
-    }
-
-    @Transactional
     public List<MealPlanItemResponse> getItemsByDate(Long userId, LocalDate planDate) {
         if (userId == null || planDate == null) {
             throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
@@ -119,40 +245,21 @@ public class MealPlanService {
                 .orElseThrow(() -> ExceptionUtil.notFound(ErrorMessage.MEAL_PLAN_NOT_FOUND));
 
         List<MealPlanItemResponse> responses = mealPlanItemRepository
-                .findAllByMealPlanIdAndPlanDateOrderByMealSlotAscItemOrderAsc(mealPlan.getId(), planDate)
+                .findAllByMealPlanIdAndPlanDate(mealPlan.getId(), planDate)
                 .stream()
-                .map(this::toScaledItemResponse)
+                .sorted(Comparator
+                        .comparing((MealPlanItem item) -> item.getMealSlot(), Comparator.nullsLast(Comparator.naturalOrder()))
+                        .thenComparing(MealPlanItem::getItemOrder, Comparator.nullsLast(Integer::compareTo))
+                        .thenComparing(MealPlanItem::getId, Comparator.nullsLast(Long::compareTo)))
+                .map(mealPlanItemMapper::toScaledResponse)
                 .toList();
 
-        hydrateIngredients(responses);
+        mealPlanIngredientService.hydrateIngredients(responses);
         return responses;
     }
 
-    private MealPlanResponse buildMealPlanResponse(MealPlan mealPlan) {
-        // Dựng response hoàn chỉnh của meal plan, bao gồm item và ingredients theo từng item.
-        MealPlanResponse response = mealPlanMapper.toResponse(mealPlan);
-
-        response.setItems(List.of());
-        return response;
-    }
-
-    private void validateUpsertRequest(Long userId, MealPlanUpsertRequest request) {
-        if (userId == null || request == null) {
-            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
-        }
-
-        if (request.getStartDate() == null || request.getEndDate() == null) {
-            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
-        }
-
-        if (request.getEndDate().isBefore(request.getStartDate())) {
-            throw ExceptionUtil.badRequest(ErrorMessage.INVALID_REQUEST);
-        }
-
-    }
-
     private MealPlanDailySummaryResponse toDailySummary(LocalDate planDate, List<MealPlanItem> items) {
-        // Ưu tiên actualServings nếu đã có, ngược lại dùng plannedServings để tính tổng theo ngày.
+        // Uu tien actualServings neu da co, nguoc lai dung plannedServings de tinh tong theo ngay.
         BigDecimal calories = BigDecimal.ZERO;
         BigDecimal protein = BigDecimal.ZERO;
         BigDecimal carbs = BigDecimal.ZERO;
@@ -189,22 +296,6 @@ public class MealPlanService {
                 .build();
     }
 
-    private MealPlanItemResponse toScaledItemResponse(MealPlanItem item) {
-        MealPlanItemResponse response = mealPlanMapper.toResponse(item);
-        BigDecimal multiplier = BigDecimal.valueOf(resolveServings(item));
-
-        response.setCalories(scale(item.getCalories(), multiplier));
-        response.setProtein(scale(item.getProtein(), multiplier));
-        response.setCarbs(scale(item.getCarbs(), multiplier));
-        response.setFat(scale(item.getFat(), multiplier));
-        response.setFiber(scale(item.getFiber(), multiplier));
-        response.setSugar(scale(item.getSugar(), multiplier));
-        response.setSodium(scale(item.getSodium(), multiplier));
-        response.setCalcium(scale(item.getCalcium(), multiplier));
-
-        return response;
-    }
-
     private int resolveServings(MealPlanItem item) {
         Integer servings = item.getActualServings() != null ? item.getActualServings() : item.getPlannedServings();
         return servings == null || servings <= 0 ? 1 : servings;
@@ -214,19 +305,71 @@ public class MealPlanService {
         return value == null ? BigDecimal.ZERO : value.multiply(multiplier);
     }
 
-    private void hydrateIngredients(List<MealPlanItemResponse> items) {
-        if (items == null || items.isEmpty()) {
-            return;
+    private List<GeneratedMealItem> fallbackGenerate(MealPlanGenerateRequest request, List<MealPlanAiCandidate> candidates) {
+        // Fallback co dinh: xoay vong candidate theo ngay va theo bua.
+        List<GeneratedMealItem> generated = new ArrayList<>();
+        int index = 0;
+        int days = resolveDays(request);
+
+        for (int day = 0; day < days; day++) {
+            LocalDate planDate = request.getStartDate().plusDays(day);
+            for (MealSlot mealSlot : DEFAULT_SLOTS) {
+                MealPlanAiCandidate candidate = candidates.get(index % candidates.size());
+                generated.add(GeneratedMealItem.builder()
+                        .planDate(planDate)
+                        .mealSlot(mealSlot)
+                        .itemOrder(1)
+                        .servings(1)
+                        .note("Generated fallback")
+                        .candidate(candidate)
+                        .build());
+                index++;
+            }
         }
+        return generated;
+    }
 
-        Map<Long, List<MealPlanItemIngredientResponse>> ingredientsByItemId = mealPlanItemIngredientRepository
-                .findAllByMealPlanItemIdIn(items.stream().map(MealPlanItemResponse::getId).toList())
-                .stream()
-                .collect(Collectors.groupingBy(
-                        MealPlanItemIngredient::getMealPlanItemId,
-                        Collectors.mapping(mealPlanMapper::toResponse, Collectors.toList())
-                ));
+    private void saveGeneratedItems(Long mealPlanId, List<GeneratedMealItem> generatedItems) {
+        mealPlanItemRepository.saveAll(
+                generatedItems.stream()
+                        .map(item -> mealPlanItemMapper.toEntity(item, mealPlanId))
+                        .toList()
+        );
+    }
 
-        items.forEach(item -> item.setIngredients(ingredientsByItemId.getOrDefault(item.getId(), List.of())));
+    private String buildUserHealthNote(UserResponse user, UserBodyMetricsResponse bodyMetrics) {
+        // Luu ghi chu suc khoe ngan gon vao meal plan de hien thi hoac debug.
+        if (user == null) {
+            return null;
+        }
+        return "Allergies: " + normalizeList(user.getAllergies())
+                + "; Eating preferences: " + normalizeList(user.getEatingPreferences())
+                + "; Dietary preferences: " + normalizeList(user.getDietaryPreferences())
+                + "; Activity level: " + normalize(user.getActivityLevel())
+                + "; Height cm: " + (bodyMetrics != null ? bodyMetrics.getHeightCm() : null)
+                + "; Weight kg: " + (bodyMetrics != null ? bodyMetrics.getWeightKg() : null)
+                + "; Health conditions: " + normalizeList(user.getHealthConditions());
+    }
+
+    private List<String> normalizeList(List<String> values) {
+        if (values == null) {
+            return List.of();
+        }
+        return values.stream()
+                .filter(Objects::nonNull)
+                .map(this::normalize)
+                .filter(value -> !value.isBlank())
+                .distinct()
+                .toList();
+    }
+
+    private String normalize(String value) {
+        return value == null ? "" : value.trim().toLowerCase(Locale.ROOT);
+    }
+
+    private int resolveDays(MealPlanGenerateRequest request) {
+        // Mac dinh sinh plan ngan va luon chan o gioi han business.
+        int days = request.getDays() == null || request.getDays() <= 0 ? DEFAULT_DAYS : request.getDays();
+        return Math.min(days, MAX_GENERATE_DAYS);
     }
 }
